--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   vpn:
-    image: dperson/openvpn-client
+    image: nativusdoge/openvpn-client
     # cap_add, security_opt, and volume required for the image to function
     cap_add:
       - net_admin
