--- a/Dockerfile.armhf
+++ b/Dockerfile.armhf
@@ -1,5 +1,5 @@
 FROM balenalib/armv7hf-alpine
-MAINTAINER David Personette <dperson@gmail.com>
+MAINTAINER nativusdoge
 
 # Install openvpn
 RUN ["cross-build-start"]
